<resources>
    <string name="app_name" translatable="false">TFG Txurdinaga</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="notas">Notas</string>
    <string name="calendario">Calendario</string>
    <string name="ajustes">Ajustes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="titulo">Titulo</string>
    <string name="fechaop">Fecha (opcional)</string>
    <string name="horaop">Hora (opcional)</string>
    <string name="linkop">Link (opcional)</string>
    <string name="emailop">E-mail (opcional)</string>
    <string name="telefonoop">Telefono (opcional)</string>
    <string name="descop">Descripcion (opcional)</string>
    <string name="hecho">Hecho?</string>
    <string name="idioma">IDIOMA</string>
    <string name="tema">TEMA</string>
    <string name="colorpri">Color Principal</string>
    <string name="colorsec">Color Secundario</string>
    <string name="alarma">Crea una nueva alarma!</string>
    <string name="fechaa">Dias</string>
    <string name="horaa">Hora</string>
    <string name="alarma2">Lista de alarmas</string>
    <string name="alarmas">Alarmas</string>
    <string name="fechaformat">Formato de fecha no válido. Utiliza xx/xx/xxxx</string>
    <string name="error">ERROR</string>
    <string name="vale">Vale</string>
    <string name="otrotitulo">¡Ese titulo ya existe! Prueba con otro.</string>
    <string name="tituloobligatorio">Es imprescindible escribir el titulo!</string>
    <string name="selectdia">Selecciona los días de la semana</string>
    <string name="cancelar">Cancelar</string>
    <string name="campovacio">Campo vacio, escribe algo.</string>
    <string name="fechaformat1">Formato incorrecto. Formato requerido: dd/mm/aaaa y 00:00</string>
    <string name="aplicaciondodisp">Aplicacion de alarmas no disponible.</string>
    <string name="appnoinsta">La aplicación de reloj no está instalada en tu dispositivo.</string>
    <string name="aceptar">Aceptar</string>
    <string name="applink">No hay aplicación para abrir la URL</string>
    <string name="urlno">URL no válida</string>
    <string name="borrar">¿Seguro que lo quieres borrar?</string>
    <string name="info">INFORMACION</string>
    <string name="info2">Esta aplicacion ha sido desarrollada por Josu Martin, Asier Iturriaga y Oier Molina, tres desarroladores de Txurdinaga CIFP. Esperamos que la disfrutes.</string>

    <!-- TODO: Remove or change this placeholder text -->



</resources>