<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco_secundario"
    tools:context=".alarmas">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView3"
        android:name="com.example.tfgtxurdinaga.navsuperior"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView4"
        android:name="com.example.tfgtxurdinaga.fragment_menu"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="509dp"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView3">

        <EditText
            android:id="@+id/fecha4"
            android:layout_width="234dp"
            android:layout_height="43dp"
            android:clickable="true"
            android:ems="10"
            android:hint="@string/horaa"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.342"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.354"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/crearbtn"
            android:layout_width="62dp"
            android:layout_height="59dp"
            android:background="@drawable/circule_drawable"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.925"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintVertical_bias="0.271"
            app:srcCompat="@drawable/check"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/fecha3"
            android:layout_width="234dp"
            android:layout_height="43dp"
            android:clickable="true"
            android:ems="10"
            android:hint="@string/fechaa"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.342"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.221"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/titulo4"
            android:layout_width="288dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/alarma"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.058"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>