<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco_secundario"
    tools:context=".ajustes">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView5"
        android:name="com.example.tfgtxurdinaga.navsuperior3"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView6"
        android:name="com.example.tfgtxurdinaga.fragment_menu"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:text="@string/idioma"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView5"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:text="@string/tema"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView5"
        app:layout_constraintVertical_bias="0.477" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:text="@string/colorpri"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView5"
        app:layout_constraintVertical_bias="0.562" />
 
    <TextView
        android:id="@+id/textView6"
        android:layout_width="210dp"
        android:layout_height="41dp"
        android:text="@string/colorsec"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView5"
        app:layout_constraintVertical_bias="0.812" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView5"
        app:layout_constraintVertical_bias="0.215"
        app:srcCompat="@drawable/euskera"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView5"
        app:layout_constraintVertical_bias="0.215"
        app:srcCompat="@drawable/espanol"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView5"
        app:layout_constraintVertical_bias="0.215"
        app:srcCompat="@drawable/ingles"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="349dp"
        android:layout_height="74dp"
        android:background="@color/marron"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView5"
        app:layout_constraintVertical_bias="0.967">

        <Button
            android:id="@+id/btnblanco2"
            android:layout_width="72dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/blanco_secundario"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.057"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnblanco"
            android:layout_width="72dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/white"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateIds,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnazul"
            android:layout_width="72dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/claro"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.942"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="349dp"
        android:layout_height="74dp"
        android:background="@color/marron"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView5"
        app:layout_constraintVertical_bias="0.697">

        <Button
            android:id="@+id/btnmarron"
            android:layout_width="72dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/check"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateIds,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnamarillo"
            android:layout_width="72dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/amarillo"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.353"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateIds,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnnaranja"
            android:layout_width="72dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/naranja"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.685"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnrojo"
            android:layout_width="72dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/rojo"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.996"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateIds,SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>